website/static/css/custom.css
/* ... */
.LearnSection > ._capabilities > ._features > ._feature > ._description {
  margin-top: 20px;
  font-size: 16px;
  text-align: center;
  color: #677897;
}
.LearnSection > ._learn {
  margin-top: 150px;
}
@media only screen and (max-width: 36em) {
  .LearnSection > ._learn {
    margin-top: 50px;
  }
}
.LearnSection > ._learn > ._title {
  font-size: 34px;
  color: #243265;
}
@media only screen and (max-width: 36em) {
  .LearnSection > ._learn > ._title {
    font-size: 25px;
    line-height: normal;
  }
}
.LearnSection > ._learn > ._subtitle {
  margin-top: 20px;
  font-size: 16px;
  color: #677897;
}
@media only screen and (max-width: 36em) {
  .LearnSection > ._learn > ._subtitle {
    font-size: 14px;
    line-height: 1.4;
  }
}
.LearnSection > ._learn > ._video {
  margin-top: 100px;
  margin-left: auto;
  margin-right: auto;
}
@media only screen and (max-width: 36em) {
  .LearnSection > ._learn > ._video {
    margin-top: 50px;
    width: calc(100vw - 30px);
    height: calc(57vw - 17px);
  }
}

.ContactUs {
  margin-top: 50px;
  color: #243265;
  padding: 0 20px;
  margin-bottom: 50px;
}

@media only screen and (max-width: 36em) {
  .ContactUs {
    margin-top: 0;
    margin-bottom: 0;
  }
}

.ContactUs > ._kicker {
  text-align: center;
}

.ContactUs > ._title {
  margin-top: 0;
  text-align: center;
}

.ContactUs > ._subtitle {
  width: 800px;
  text-align: center;
  margin-top: 25px;
  margin-left: auto;
  margin-right: auto;
  color: #677897;
}

@media only screen and (max-width: 36em) {
  .ContactUs > ._kicker {
    font-size: 22px;
  }
  .ContactUs > ._title {
    font-size: 28px;
  }
  .ContactUs > ._subtitle {
    width: 100%;
    text-align: justify;
    font-size: 16px;
  }
}

#docsNav {
  border-right: solid 1px #b4bcd9;
}
#docsNav .navGroupCategoryTitle {
  margin: 0;
  font-size: 20px;
  font-weight: 600;
  color: #243265;
  text-transform: uppercase;
  font-weight: 600;
  border-bottom: solid 1px #e6ecf4;
  padding-left: 10px;
  margin-left: -10px;
  line-height: 2.5;
}
#docsNav .navGroup ul {
  border-left: solid 1px #e6ecf4;
  padding-bottom: 0;
  transform: translateY(-15px);
  clip-path: inset(15px 0 -999px -999px);
}
#docsNav .navListItem {
  padding: 5px 0;
  transform: translateY(20px);
}
#docsNav .navListItem a {
  font-size: 16px;
  color: #677897;
  padding-left: 5px;
}
#docsNav .navListItem a::before {
  height: 8px;
  transform: translateY(-1px) translateX(-5px);
  background-color: white;
  content: "○";
  display: inline-block;
  margin-left: -13px;
  margin-right: 4px;
  line-height: 0.5;
}
#docsNav .navListItem.navListItemActive a {
  color: #115ee1;
  font-weight: 600;
  padding-left: 9px;
}
#docsNav .navListItem.navListItemActive a::before {
  margin-right: 8px;
  transform-origin: center;
  transform: translateY(-2px) translateX(-7px) scale(2);
  background-color: transparent;
  content: "•";
}

.fixedHeaderContainer {
  padding-top: 25px;
  padding-bottom: 25px;
  z-index: 99;
  position: relative;
}

.navPusher {
  padding-top: 0;
  position: static;
}

.headerTitleWithLogo {
  display: none !important;
}

.projectTitle {
  font-family: "Montserrat";
  font-size: 40px;
  font-weight: bold;
  line-height: 1.23;
  color: #ffffff;
}

footer {
  pointer-events: auto;
  padding-top: 16px !important;
  padding-bottom: 8px !important;
  display: flex;
  justify-content: space-around;
}
footer .nav-footer {
  background-color: #13114a;
}
footer .navCopyright {
  font-family: "Montserrat";
  font-size: 14px;
  color: #b0b7dd;
}
footer .navMenu {
  display: flex;
}
footer .navMenu > * {
  margin-left: 25px;
  font-family: "Montserrat";
  font-size: 16px;
  font-weight: 500;
  line-height: 1.64;
  color: #ffffff;
}

.backgroundTop {
  pointer-events: none;
  background-size: 800px auto;
  background: url(/img/hexagonal.svg) no-repeat right -245px top -80px;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  z-index: 100;
}

@media only screen and (max-width: 1023px) {
  footer .navMenu {
    display: none;
  }

  footer .navCopyright > span:first-child {
    display: none;
  }

  header {
    position: static !important;
  }

  header .navigationSlider {
    position: static;
  }

  header .slidingNav {
    position: absolute !important;
  }

  .backgroundTop {
    background: none;
  }

  .Intro {
    background-image: none;
  }

  .Intro > ._start-section {
    padding-top: 50px;
  }

  .docsNavContainer {
    position: absolute;
  }

  #docsNav .navListItem {
    margin-left: 8px;
  }

  .navBreadcrumb.wrapper {
    z-index: 1;
  }
}

